--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@
 @import url("./components/MoviesCardList/MoviesCardList.css");
 @import url("./components/MoviesCard/MoviesCard.css");
 
+@import url("./components/MoviesNotFound/MoviesNotFound.css");
+
 /*----------------------- Блок Profile ------------------------------ */
 @import url("./components/profile/Profile.css");
 
